GP-2974: Fixing warnings